--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,8 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) { */
+.dark {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
